# papers

./: config.yaml  pyproject.toml
src/papers/backend/: api.py  config.py  data_sources.py  deps.py  main.py  models.py  orchestrator.py  orcid.py  search.py  security.py  storages.py  tasks.py
src/papers/backend/routers/: auth.py  discovery.py  documents.py  ingestion.py  kbs.py  orcid.py  sources.py  users.py
src/papers/frontend/: index.html  library.html  login.html  orcid_profile.html
src/papers/frontend/assets/css/: tailwind.css
src/papers/frontend/assets/js/: api.js  auth.js  discovery.js  orcid_profile.js  settings.js  ui.js  utils.js  workspace.js
src/papers/frontend/components/: doi_card.html  downloads_panel.html  sidebar.html  usage_panel.html
tests/: conftest.py  test_api.py  test_core_config.py  test_core_data_source.py  test_data_sources.py  test_downloader.py  test_e2e_core.py  test_e2e_system.py  test_integration_semantic.py  test_live_ingestion.py  test_orchestrator.py  test_orcid.py  test_router_orcid.py  test_security.py  test_semantic_search.py  test_storages.py  test_tasks.py
